<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Order</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="OrderSummary">Order Summary</string>
    <string name="zerodollar">$0</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="thankyou">Woohooo! Thank You :)</string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_whipped_cream">Added Whipped Cream = <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_price">Total: $<xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_chocolate">Added Chocolate = <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_name">Name <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>