<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="12dp"
        android:inputType="textCapWords"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/toppings"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="15dp"
        android:text="@string/whipped_cream"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="15dp"
        android:text="@string/chocolate"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="incrementOrder"
            android:backgroundTint="#FFEB3B"
            android:text="@string/plus"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="decrementOrder"
            android:backgroundTint="#FFEB3B"
            android:text="@string/minus"
            android:textSize="15sp" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/OrderSummary"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/zerodollar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textColor="@color/white"
        app:backgroundTint="#000000" />


</LinearLayout>
</ScrollView>